--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,15 @@ input:focus {
   cursor: pointer;
   transform: scale(1.2);
 }
+
+@media screen and (max-width: 680px) {
+  h1 {
+    text-align: center;
+    font-size: 6em;
+  }
+
+  input {
+    width: 400px;
+    margin: 0 auto;
+  }
+}
